<resources>
    <string name="app_name">Albayt</string>
    <string name="map_api_key">AIzaSyBXy85uRxDOANRJSCbUlIQ9NyHIRF0kkno</string>
    <string name="search_key">AIzaSyBXy85uRxDOANRJSCbUlIQ9NyHIRF0kkno</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy</string>
    <string name="contact_us">Contact Us</string>
    <string name="wait">Wait...</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="no_search_result">No search result</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="inv_email">invalid email</string>
    <string name="field_required">field required</string>
    <string name="what_are_you_looking_for">what are you looking for ?</string>
    <string name="categories">Categories</string>
    <string name="no_categories_to_show">No categories to show</string>
    <string name="no_products_to_show">No products to show</string>
    <string name="most_sale_products">Latest products</string>
    <string name="recent_news">Latest news</string>
    <string name="my_list">My list</string>
    <string name="delivery_addresses">Delivery addresses</string>
    <string name="your_not_logged_in">You are not logged in</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="egypt">Egypt</string>
    <string name="we_sent_an_code_to_verify_yor_phone">We sent an code to verify yor phone</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verify">Verify</string>
    <string name="facility_name">Facility name</string>
    <string name="vat_number">VAT Number</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="choose_photo">Choose photo</string>
    <string name="sign_up_inf"><![CDATA[<h4>1.Photo</h4> <p> lorem </p><br> <h4>2.Company Name</h4> <p> lorem </p> <br> <h4>3.Email</h4> <p> lorem </p> <br> <h4>4.Tax Number</h4> <p> lorem </p>]]></string>
    <string name="information">Information</string>
    <string name="share_app">Share App</string>
    <string name="follow_us">Follow Us</string>
    <string name="order">Order</string>
    <string name="to">To</string>
    <string name="new_address">New Address</string>
    <string name="location_title">Location Title</string>
    <string name="administrator_s_name">Administrator\'s name</string>
    <string name="phone_number">Phone number</string>
    <string name="preferred_delivery_time">Preferred delivery time</string>
    <string name="address">Address</string>
    <string name="address2">address</string>
    <string name="add">Add</string>
    <string name="add_address">Add Address</string>
    <string name="order_number">Order number :</string>
    <string name="done">Done</string>
    <string name="order_time">Order time</string>
    <string name="delivered">Delivered</string>
    <string name="re_order">Re Order</string>
    <string name="expected_delivery_time">Expected delivery time :</string>
    <string name="rate_provider">Rate Provider</string>
    <string name="total_cost">Total cost</string>
    <string name="sar">R.S</string>
    <string name="preparing">Preparing</string>
    <string name="on_the_way">On the way</string>
    <string name="edit">Edit</string>
    <string name="collecting_packages_from_suppliers">Collecting packages\n from suppliers</string>
    <string name="show_offer">Show offer</string>
    <string name="some_products_are_not_available">Some products are not available</string>
    <string name="there_are_other_brand_to_some_products">There are Other brand to some products</string>
    <string name="some_products_have_less_quantities">Some products have Less quantities</string>
    <string name="order_details">Order Details</string>
    <string name="unavailable">Unavailable</string>
    <string name="available_quantity">Available Quantity :</string>
    <string name="single_price2">Single Price :</string>
    <string name="total_price2">Total Price :</string>
    <string name="ordered">Ordered :</string>
    <string name="offer_detials">Offer Detials</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="products_cost">products cost :</string>
    <string name="vat">VAT :</string>
    <string name="note">Note</string>
    <string name="add_note">Add note</string>
    <string name="complete_order">Complete Order</string>
    <string name="search_for_product">Search for product...</string>
    <string name="specifications">Specifications</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="products">Products</string>
    <string name="no_search_results">No search results</string>
    <string name="ph_found">Phone Found</string>
    <string name="em_found">Email Found</string>
    <string name="ch_time">Choose Time</string>
    <string name="empty_cart">Empty cart</string>
    <string name="order_all">Order All</string>
    <string name="upd_address">Update Address</string>
    <string name="home_work">(home - work)...</string>
    <string name="user_not_found">User not found</string>
    <string name="no_prov_aval">No providers available for these category right now</string>
    <string name="new1">New</string>
    <string name="new_offer">New offer</string>
    <string name="offer_accepted">Offer accepted</string>
    <string name="rejected">Rejected</string>
    <string name="no_orders">No Orders To Show</string>
    <string name="not_available">Not available</string>
    <string name="alternative_product">Alternative Product</string>
    <string name="less_quantitiy">Smaller Quantities</string>
    <string name="inv_link">invalid link</string>
    <string name="suppliers">suppliers</string>
    <string name="contoractors">Contoractors</string>
    <string name="no_items_to_show">No Items To Show</string>
    <string name="search_for_suppliers">Search for suppliers…</string>
    <string name="search_for_contractors">Search for contractors…</string>
    <string name="no_contractors">No Contactors To Show</string>
    <string name="our_blog">Our Blog</string>
    <string name="join_us">Join Us</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="please_select_an_account_type">Please select an account type …</string>
    <string name="user">User</string>
    <string name="normal_user_for_app">Normal User For App</string>
    <string name="selling_products_to_customers">Selling products to customers</string>
    <string name="installing_products_for_customers">Installing products for customers</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applications">Applications</string>
    <string name="certs">Certifications</string>
    <string name="share_with">Share with :</string>
    <string name="blog_details">Blog Details</string>
    <string name="sup_name">Supplier Name</string>
    <string name="cont_numb">Contact phone number</string>
    <string name="whats_number">WhatsApp Number</string>
    <string name="comm_number">Commercial Number</string>
    <string name="back">Back</string>
    <string name="ch_category">Choose Category</string>
    <string name="city">City</string>
    <string name="cont_name">Contractor name</string>
    <string name="portfolio">Portfolio</string>
    <string name="ch_city">Choose city</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="cust_order">Customer Orders</string>

</resources>