<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.apps.albayt.model.ContractorSignUpModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_square"
                        app:tint="@color/colorPrimary"

                        />

                    <androidx.legacy.widget.Space
                        android:layout_width="8dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/portfolio"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_rounded_stroke_grey4"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"

                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        />

                </FrameLayout>



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <Button
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/small_stroke_primary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/font_regular"
                android:text="@string/back"
                />
            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_enabled"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/font_regular"
                android:text="@string/let_s_start"
                android:enabled="@{model.step2Valid,default=false}"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
