<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey9"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toTopOf="@id/btnAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="22dp"
                            android:layout_marginEnd="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_map" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/font_regular"
                                android:text="@string/address"
                                android:textColor="@color/black2"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recViewAddresses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" />

                        <LinearLayout
                            android:id="@+id/llNewAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/rounded_grey4_stroke_color2"
                            android:orientation="horizontal"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="14.5dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_add" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/font_regular"
                                android:text="@string/new_address"
                                android:textColor="@color/color2"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="22dp"
                            android:layout_marginEnd="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_subject" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:fontFamily="@font/font_regular"
                                android:text="@string/note"
                                android:textColor="@color/black2"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="21dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="32dp"
                            android:background="@drawable/rounded_white_stroke_gray11">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent"
                                android:fontFamily="@font/font_regular"
                                android:hint="@string/add_note"
                                android:padding="16dp"
                                android:textColor="@color/black2"
                                android:textColorHint="@color/grey8"
                                android:textSize="14sp" />

                        </FrameLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:alpha=".5"
                        android:background="@drawable/shadow_top" />
                </FrameLayout>

            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/color2"
                android:fontFamily="@font/font_regular"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>